frontend/test/should_fail/index_isin_edge_fromto_argument2_mismatch.grg
#using "index_count_edge_model.gm"

rule i {
	-e:E->;
	
	if{ isInEdgesFromIndexFromTo(e, fooi, enu::qux, 42.0); }
	
	modify {
	}
}
